# op-geth

./: .dockerignore  Dockerfile  Makefile
core/txpool/legacypool/: legacypool.go
core/vm/: contracts.go  contracts_test.go
core/vm/lib/: .gitignore  Cargo.toml  stark_verifier.h  tree.txt
core/vm/lib/methods/guest/: Cargo.toml
core/vm/lib/methods/guest/src/: main.rs
core/vm/lib/src/: lib.rs
core/vm/stark/: .gitignore  Cargo.toml
core/vm/stark/methods/: Cargo.toml
core/vm/stark/src/: lib.rs
