[package]
name = "stark_precompile"
version = "0.1.0"
edition = "2021"

[lib]
name = "stark_verifier"
crate-type = ["staticlib"]

[dependencies]
bincode = "1.3"
risc0-zkvm = { version = "0.21", default-features = false }
hello-world-methods = { path = "methods", optional = true}

[features]
generate = ["dep:hello-world-methods", "risc0-zkvm/default", "risc0-zkvm/prove"]
